--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "16.1.6",
     "next-auth": "^5.0.0-beta.30",
     "openai": "^6.17.0",
+    "@prisma/client": "^6.3.0",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
@@ -31,6 +32,7 @@
     "eslint-config-next": "16.1.6",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.18",
+    "prisma": "^6.3.0",
     "typescript": "^5"
   }
 }
